traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:2: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  right()
  ^Snake:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  back()
  ^Snake:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  right()
  ^Snake:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur() && ((getDirection() == Direction.EST && b) || (getDirection() == Direction.WEST && a)){
  ^